# sip_server

./: .gitignore  CMakeLists.txt  README.md  error.pcap.pcapng
example/: h264_access_unit_stream.c  h264_access_unit_stream.h  mock_media_source.c  mock_media_source.h  upper_push_demo.c
include/: config.h  net.h  sip_embed.h  sip_server.h  streamer.h
include/sipserver/: config.h  sip_embed.h  sip_server.h  sip_session.h  streamer.h
scripts/: prepare_media.sh
src/: config.c  ikcp.c  main.c  net.c  sip_embed.c  sip_server.c  sip_session.c  streamer.c
src/internal/: ikcp.h  net.h
